# routes/userRoutes.js
@@ -8,9 +8,24 @@ const storage = multer.diskStorage({
     cb(null, "./uploads");
   },
   filename: (req, file, cb) => {
-    cb(null, file.fieldname + file.originalname + "-" + Date.now() + ".jpg");
+    cb(
+      null,
+      file.fieldname + "-" + file.originalname + "-" + Date.now() + ".jpg"
+    );
   },
 });
+
+const filefilter = (req, file, cb) => {
+  if (
+    file.mimeType === "image/jpeg" ||
+    file.mimeType === "image/png" ||
+    file.mimeType === "image/jpg"
+  ) {
+    cb(null, true);
+  } else {
+    cb(null, false);
+  }
+};
 
 var upload = multer({ storage: storage });
 
@@ -20,6 +35,10 @@ route.post("/signup", upload.single("profile"), userController.signup);
 route.get("/:token", userController.verify);
 route.post("/login", userController.login);
 route.delete("/deleteUser", userController.deleteUser);
-// route.put('/updateUser', userController.updateUser);
-
+route.put("/updateUser", userController.updateUser);
+route.get("/password/getForgotPassword", userController.getForgotPassword);
+route.post("/updateUser", userController.getUpdateUser);
+route.post("/forgotPassword", userController.forgotPassword);
+route.get("/:id/:token", userController.getresetPassord);
+route.post("/resetPassord", userController.resetPassword);
 module.exports = route;
